--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,20 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:weightSum="10"
     tools:context=".fragment.HomeFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/homeRecycler"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/homePager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="4.5">
 
-    </android.support.v7.widget.RecyclerView>
+    </android.support.v4.view.ViewPager>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="32dp">
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/homeSlide1"
@@ -35,4 +37,14 @@
 
     </LinearLayout>
 
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="6">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/ic_app_main"/>
+</FrameLayout>
 </LinearLayout>
