--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -16,7 +16,6 @@
         android:background="@drawable/bg_home"
         android:gravity="center"
         android:weightSum="3"
-        android:elevation="6dp"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -25,38 +24,38 @@
             android:layout_weight="1.5">
 
             <TextView
-                android:id="@+id/homeList"
+                android:id="@+id/personalText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@id/homeListMoneyImg"
-                android:text="내잔고"
+                android:layout_above="@id/personalMoneyImg"
+                android:text="한도까지 남은 금액"
                 android:layout_marginBottom="15dp"
                 android:textColor="#343a40"
                 android:textSize="12sp" />
 
 
-                <ImageView
-                    android:id="@+id/homeListMoneyImg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="18dp"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/main_won" />
+            <ImageView
+                android:id="@+id/personalMoneyImg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="18dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/main_won" />
 
-                <TextView
-                    android:layout_toRightOf="@+id/homeListMoneyImg"
-                    android:id="@+id/homeListMoney"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="10000"
-                    android:layout_centerVertical="true"
-                    android:textColor="#343a40"
-                    android:textSize="48sp" />
+            <TextView
+                android:layout_toRightOf="@+id/personalMoneyImg"
+                android:id="@+id/personalMoney"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10000"
+                android:layout_centerVertical="true"
+                android:textColor="#343a40"
+                android:textSize="48sp" />
 
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/homeListDay"
+            android:id="@+id/personalDay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
