--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#883997</color>
     <color name="colorAccent">#ba68c8</color>
     <color name="color">#ffffff</color>
+    <color name="colorTint">#adb5bd</color>
 </resources>
