--- a/app/src/main/res/layout/data_item.xml
+++ b/app/src/main/res/layout/data_item.xml
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <View
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#ced4da"
+        />
+
+    <TextView
+        android:id="@+id/itemDate"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10월10일"
+        android:textSize="14sp"
+        android:textColor="#343a40"
+        />
+
+    <View
+        app:layout_constraintTop_toBottomOf="@+id/itemDate"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#ced4da"
+    />
 </android.support.constraint.ConstraintLayout>
