--- a/app/src/main/res/drawable/bg_householdledger_layout.xml
+++ b/app/src/main/res/drawable/bg_householdledger_layout.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-</selector>
+    <solid
+        android:color="#ffffff"
+        />
+
+    <corners
+        android:radius="6dp"
+        />
+
+    <size
+        android:width="315dp"
+        android:height="320dp"
+        />
+
+</shape>
