--- a/app/src/main/res/layout/activity_tutorial1.xml
+++ b/app/src/main/res/layout/activity_tutorial1.xml
@@ -47,9 +47,9 @@
                 android:textColor="#343a40"
                 android:textSize="20sp" />
 
-            <RelativeLayout
+            <android.support.constraint.ConstraintLayout
                 android:id="@+id/Tutorial1Layout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="51dp">
 
@@ -58,23 +58,35 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="31dp"
-                    android:background="@drawable/calendar" />
+                    android:background="@drawable/calendar"
+                    app:layout_constraintLeft_toLeftOf="parent" />
 
                 <TextView
                     android:id="@+id/Tutorial1Text"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="20dp"
-                    android:layout_toRightOf="@+id/Tutorial1Icon"
                     android:letterSpacing="0.01"
                     android:lineSpacingExtra="10sp"
                     android:text="2018.10.16"
                     android:textColor="#868e96"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toRightOf="@+id/Tutorial1Icon" />
 
-            </RelativeLayout>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginRight="30dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:background="@drawable/ic_arrow_drop_down_black_24dp" />
+
+            </android.support.constraint.ConstraintLayout>
 
             <Button
                 android:id="@+id/Tutorial1NextBtn"
@@ -104,22 +116,22 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_tutorial"
                 android:layout_marginLeft="8dp"
-                android:backgroundTint="#adb5bd"/>
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:background="@drawable/bg_tutorial"
-                android:layout_marginLeft="8dp"
                 android:backgroundTint="#adb5bd" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_tutorial"
                 android:layout_marginLeft="8dp"
+                android:background="@drawable/bg_tutorial"
+                android:backgroundTint="#adb5bd" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/bg_tutorial"
                 android:backgroundTint="#adb5bd" />
 
 
