--- a/app/src/main/res/layout/fragment_householdledger.xml
+++ b/app/src/main/res/layout/fragment_householdledger.xml
@@ -60,24 +60,22 @@
 
     </android.support.constraint.ConstraintLayout>
 
-    <View
-        android:layout_marginTop="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#ced4da"
-        />
 
     <FrameLayout
+        android:id="@+id/houseFrame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/houseRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
         </android.support.v7.widget.RecyclerView>
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/houseFab"
+            android:visibility="visible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
@@ -86,4 +84,18 @@
             android:src="@drawable/ic_add_black_24dp" />
 
     </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/houseLinear"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/piechart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
+
 </LinearLayout>
