--- a/app/src/main/res/layout/householdledger_item.xml
+++ b/app/src/main/res/layout/householdledger_item.xml
@@ -1,11 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="10dp"
+    android:paddingLeft="16dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text=""/>-->
+    <TextView
+        android:id="@+id/itemSubText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="식비"
+        android:textColor="#417505"
+        android:textSize="14sp"
+        />
 
+    <TextView
+        android:id="@+id/itemMainText"
+        app:layout_constraintTop_toBottomOf="@+id/itemSubText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:text="김밥천국"/>
+
+    <TextView
+        android:id="@+id/itemPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#8e0038"
+        android:letterSpacing="0.03"
+        android:lineSpacingExtra="4sp"
+        android:gravity="end"
+        android:layout_marginRight="16dp"
+        android:text="-7,300"
+        />
+
+    <View
+        android:layout_marginTop="9dp"
+        app:layout_constraintTop_toBottomOf="@+id/itemMainText"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#e9ecef"
+        android:layout_marginLeft="16dp"
+        />
 </android.support.constraint.ConstraintLayout>
