--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
             android:title="회원정보수정" />
         <item
             android:id="@+id/nav_penalty"
-            android:title="초가설정변경" />
+            android:title="초기설정변경" />
         <item
             android:id="@+id/nav_ask"
             android:title="문의하기" />
