--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.LockActivity">
+    android:background="@drawable/bg_rock"
+    tools:context=".activity.RockActivity">
 
 
     <TextView
@@ -15,6 +16,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20sp"
+        android:textColor="#FFF"
+        android:textStyle="bold"
+        android:layout_marginBottom="15dp"
         android:text="ㅁㄴㅇㄹㅁㄴㅇㄹ"/>
 
 </android.support.constraint.ConstraintLayout>
