--- a/app/src/main/res/layout/activity_user_setting.xml
+++ b/app/src/main/res/layout/activity_user_setting.xml
@@ -45,7 +45,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_weight="2"
+        android:layout_weight="1.5"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="28dp"
@@ -97,6 +97,25 @@
             android:textColor="#343a40"
             android:textSize="13dp"
             android:theme="@style/textStyle" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="0dp"
+        android:layout_weight="0.5">
+
+        <Button
+            android:id="@+id/userSettingSubmit"
+            android:layout_width="195dp"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:text="제출"
+            android:textColor="#FFF"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:background="@drawable/bg_login_btn"/>
 
     </LinearLayout>
 
